#202: Fix overlapping on mobile browser (#217)

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -117,7 +117,7 @@ header {
 #language-switcher {
 	position: absolute;
 	right: 0;
-	top: 1em;
+	top: -1em;
 }
 
 .language-switcher > ul {
